--- a/_includes/components/intro.html
+++ b/_includes/components/intro.html
@@ -55,7 +55,7 @@
 .intro-section p {
   margin-bottom: 0.5rem;
   font-size: 1.125rem;
-  text-align: center;
+  text-align: left;
 }
 
 .intro-section .hello-text {
@@ -77,7 +77,7 @@
 /* Intro block styles */
 .intro-block {
   margin-bottom: 1.5rem;
-  text-align: center;
+  text-align: left;
 }
 
 .intro-label {
@@ -202,6 +202,7 @@
     margin-top: 0.5rem;
     height: auto;
     min-height: 0;
+    text-align: left;
   }
   .introduction {
     height: auto;
