--- a/_layouts/pages/project.html
+++ b/_layouts/pages/project.html
@@ -2,7 +2,7 @@
 layout: pages/default
 ---
 
-{% include partials/nav-proj.html %}
+{% include components/navigation/nav-proj.html %}
     
 <header class="project-header">
     <h1>{{ page.title }}</h1>
