--- a/_layouts/pages/publication.html
+++ b/_layouts/pages/publication.html
@@ -3,7 +3,7 @@ layout: pages/default
 ---
 
     
-{% include partials/nav-pub.html %}
+{% include components/navigation/nav-pub.html %}
 
 {% include partials/pub-header.html %}
 
