--- a/_includes/components/intro.html
+++ b/_includes/components/intro.html
@@ -1,37 +1,15 @@
 <section class="w-full intro-section">
   <div class="h-64 mb-4 introduction">
     <div class="intro-block">
-        <p class="intro-label">research</p>
-        <p class="intro-text">I'm a <strong>Human-Agent Interaction researcher</strong> focused on <mark>amplifying human creativity</mark>. I design, build, and study tools that help novices develop domain expertise — with an emphasis on empowering humans to be more… human (authentic + expressive).</p>
-        <p class="intro-text">Here are some of my previous work <i class="fas fa-arrow-right arrow-icon"></i> <a href="/publications/art01" class="intro-link"><i class="fas fa-file-alt"></i></a> <a href="/projects/xr-physical-assault" class="intro-link"><i class="fas fa-microphone"></i></a></p>
+        <p class="intro-text">I'm a <strong>Human-Agent Interaction researcher</strong> focused on <mark>human creativity</mark>. I design, build, and study tools that help novices develop domain expertise — with an emphasis on empowering humans to be more… human (authentic + expressive).</p>
     </div>
     <div class="intro-block">
-        <p class="intro-label">position</p>
-        <p class="intro-text">Currently part of the amazing <a href="https://smuhci.com/">SMU-HCI</a> community at the School of Computing and Information Systems, Singapore Management University. I'm also with the SMU HAI-Lab, advised by <a href="https://jchrisli.github.io/">Li Jiannan</a>.</p>
-    </div>
-    <div class="intro-block">
-        <p class="intro-label">education & experience</p>
         <p class="intro-text">
-            <table class="intro-table">
-                <tr>
-                    <td class="intro-table-number" style="color: #3b82f6;">25-29</td>
-                    <td class="intro-table-content">Ph.D. in Computer Science, Singapore Management University</td>
-                </tr>
-                <tr>
-                    <td class="intro-table-number">22-24</td>
-                    <td class="intro-table-content">Master of Computing, National University of Singapore</td>
-                </tr>
-                <tr>
-                    <td class="intro-table-number">18-20</td>
-                    <td class="intro-table-content">B.Sc. in Computing Science (First Class Honours), University of Glasgow</td>
-                </tr>
-            </table>
+            Doing my Ph.D. CS at SMU, part of the amazing <a href="https://smuhci.com/">SMU-HCI</a> community, working on human-agent interactions under <a href="https://jchrisli.github.io/">Li Jiannan</a>. Previously completed MComp CS at NUS where I worked with <a href="https://www.comp.nus.edu.sg/~zhaosd/">Zhao Shengdong</a>, and B.Sc. CS (1st) from UofG under <a href="https://www.gla.ac.uk/schools/computing/staff/jeanniele/">Jeannie Lee</a>.
         </p>
     </div>
     <div class="intro-block">
-        <p class="intro-label">others</p>
         <p class="intro-text">Enjoy building and occasionally crashing interplanetary rockets in Kerbal Space Program 🚀 and creating unnecessarily complicated factory designs in Factorio 🔧</p>
-        <p class="intro-text">If you wanna chat, drop me a text! <a href="https://instagram.com/emranpoh" target="_blank" class="intro-link"><i class="fab fa-instagram"></i></a> <a href="https://t.me/emranpoh" target="_blank" class="intro-link"><i class="fab fa-telegram"></i></a></p>
     </div>
   </div>
 </section>
@@ -76,7 +54,7 @@
 
 /* Intro block styles */
 .intro-block {
-  margin-bottom: 1.5rem;
+  margin-bottom: 0;
   text-align: left;
 }
 
@@ -211,5 +189,15 @@
   .intro-buttons {
     display: none !important;
   }
+}
+
+.links-section {
+    margin-top: 1rem;
+}
+
+.links-grid {
+    display: flex;
+    gap: 0.5rem;
+    flex-wrap: wrap;
 }
 </style> 
