--- a/_includes/layouts/mobile/sections.html
+++ b/_includes/layouts/mobile/sections.html
@@ -126,7 +126,7 @@
                             <span style="position: absolute; bottom: 0.25rem; right: 0.25rem; font-size: 0.75rem;">
                                 {% if project.is-collab %}👥{% endif %}
                             </span>
-                            <a href="{{ '/projects/' | append: project.title | slugify | relative_url }}" style="text-decoration: none; display: flex; align-items: center; justify-content: {% if project.is-collab or project.institution %}flex-start{% else %}center{% endif %}; width: 100%; height: 100%;">
+                            <a href="{{ project.url | relative_url }}" style="text-decoration: none; display: flex; align-items: center; justify-content: {% if project.is-collab or project.institution %}flex-start{% else %}center{% endif %}; width: 100%; height: 100%;">
                                 <span style="font-size: calc(6vw);">{{ project.emoji | default: "📁" }}</span>
                             </a>
                         </div>
@@ -153,7 +153,7 @@
                             <span style="position: absolute; bottom: 0.25rem; right: 0.25rem; font-size: 0.75rem;">
                                 {% if project.is-collab %}👥{% endif %}
                             </span>
-                            <a href="{{ '/projects/' | append: project.title | slugify | relative_url }}" style="text-decoration: none; display: flex; align-items: center; justify-content: {% if project.is-collab or project.institution %}flex-start{% else %}center{% endif %}; width: 100%; height: 100%;">
+                            <a href="{{ project.url | relative_url }}" style="text-decoration: none; display: flex; align-items: center; justify-content: {% if project.is-collab or project.institution %}flex-start{% else %}center{% endif %}; width: 100%; height: 100%;">
                                 <span style="font-size: calc(6vw);">{{ project.emoji | default: "📁" }}</span>
                             </a>
                         </div>
